[FIX] Rearrange layouts/social elements to keep them on one line and without overlaps.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/15.x@58735 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -3030,6 +3030,9 @@ body.tiki.navbar-padding {
   margin-bottom: 0;
   min-height: 32px;
 }
+#topbar_modules_social {
+  float: left;
+}
 .img-thumbnail.media-object {
   max-width: none;
 }
