--- a/themes/base_files/less/tiki-bootstrap_overrides.less
+++ b/themes/base_files/less/tiki-bootstrap_overrides.less
@@ -167,6 +167,8 @@ body.tiki.navbar-padding {
 	}
 }
 
+#topbar_modules_social { float: left; }
+
 // https://github.com/twbs/bootstrap/issues/16120
 .img-thumbnail {
 	&.media-object {
